--- a/.i3-desktop/config
+++ b/.i3-desktop/config
@@ -115,8 +115,8 @@ bindsym $mod+2 workspace 2 : www
 bindsym $mod+3 workspace 3 : other
 bindsym $mod+4 workspace 4 : chat
 bindsym $mod+5 workspace 5 : mail
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
+bindsym $mod+6 workspace 6 : torrent
+bindsym $mod+7 workspace 7 : other
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
@@ -127,8 +127,8 @@ bindsym $mod+Shift+2 move container to workspace 2 : www
 bindsym $mod+Shift+3 move container to workspace 3 : other
 bindsym $mod+Shift+4 move container to workspace 4 : chat
 bindsym $mod+Shift+5 move container to workspace 5 : mail
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+6 move container to workspace 6 : torrent
+bindsym $mod+Shift+7 move container to workspace 7 : other
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
@@ -171,9 +171,11 @@ bindsym $mod+r mode "resize"
 #xrandr --output HDMI1 --right-of eDP1
 workspace "1 : main" output DFP3
 workspace "2 : www" output DFP3
-workspace "3 : other" output DFP4
+workspace "3 : other" output DFP3
+workspace "7 : other" output DFP4
 workspace "4 : chat" output DFP4
 workspace "5 : mail" output DFP4
+workspace "6 : torrent" output DFP4
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -190,11 +192,9 @@ bar {
         	inactive_workspace #9B30FF #551A8B #cfcfcf
         	urgent_workspace   #aa0000 #990000 #ffffff
         }
-	status_command i3status
-        tray_output DFP3 
-        
-        # Using custom i3status.conf
-        status_command i3status -c ~/.i3/i3status.conf
+    tray_output DFP3 
+    # Using custom i3status.conf
+    status_command i3status -c ~/.i3/i3status.conf
 }
 
 #Assign window on workspace
@@ -202,7 +202,7 @@ assign [class="Google-chrome"] 2 : www
 assign [class="Thunderbird"] 5 : mail
 assign [class="Skype"] 4 : chat
 assign [class="Hexchat"] 4 : chat
-assign [class="Ktorrent"] 6
+assign [class="Ktorrent"] 6 : torrent
 
 # Disable mouse focus
 focus_follows_mouse no
