--- a/.i3-desktop/config
+++ b/.i3-desktop/config
@@ -109,27 +109,38 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+# set workspace names 
+set $tag1 "1 : code"
+set $tag2 "2 : www"
+set $tag3 "3 : term"
+set $tag4 "4 : chat"
+set $tag5 "5 : mail"
+set $tag6 "6 : torrent"  
+set $tag7 "7 : music"
+set $tag8 "8 : other"
+
+
 # switch to workspace
-bindsym $mod+1 workspace 1 : main
-bindsym $mod+2 workspace 2 : www
-bindsym $mod+3 workspace 3 : other
-bindsym $mod+4 workspace 4 : chat
-bindsym $mod+5 workspace 5 : mail
-bindsym $mod+6 workspace 6 : torrent
-bindsym $mod+7 workspace 7 : other
-bindsym $mod+8 workspace 8
+bindsym $mod+1 workspace $tag1
+bindsym $mod+2 workspace $tag2
+bindsym $mod+3 workspace $tag3
+bindsym $mod+4 workspace $tag4
+bindsym $mod+5 workspace $tag5
+bindsym $mod+6 workspace $tag6
+bindsym $mod+7 workspace $tag7
+bindsym $mod+8 workspace $tag8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1 : main
-bindsym $mod+Shift+2 move container to workspace 2 : www
-bindsym $mod+Shift+3 move container to workspace 3 : other
-bindsym $mod+Shift+4 move container to workspace 4 : chat
-bindsym $mod+Shift+5 move container to workspace 5 : mail
-bindsym $mod+Shift+6 move container to workspace 6 : torrent
-bindsym $mod+Shift+7 move container to workspace 7 : other
-bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+1 move container to workspace $tag1
+bindsym $mod+Shift+2 move container to workspace $tag2
+bindsym $mod+Shift+3 move container to workspace $tag3
+bindsym $mod+Shift+4 move container to workspace $tag4
+bindsym $mod+Shift+5 move container to workspace $tag5
+bindsym $mod+Shift+6 move container to workspace $tag6
+bindsym $mod+Shift+7 move container to workspace $tag7
+bindsym $mod+Shift+8 move container to workspace $tag8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
@@ -169,13 +180,13 @@ bindsym $mod+r mode "resize"
 #Assign multiple monitors
 #xrandr --output eDP1 --primary 
 #xrandr --output HDMI1 --right-of eDP1
-workspace "1 : main" output DFP3
-workspace "2 : www" output DFP3
-workspace "3 : other" output DFP3
-workspace "7 : other" output DFP4
-workspace "4 : chat" output DFP4
-workspace "5 : mail" output DFP4
-workspace "6 : torrent" output DFP4
+workspace $tag1 output DFP3
+workspace $tag2 output DFP3
+workspace $tag3 output DFP3
+workspace $tag4 output DFP4
+workspace $tag5 output DFP4
+workspace $tag6 output DFP4
+workspace $tag7 output DFP4
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -198,11 +209,11 @@ bar {
 }
 
 #Assign window on workspace
-assign [class="Google-chrome"] 2 : www
-assign [class="Thunderbird"] 5 : mail
-assign [class="Skype"] 4 : chat
-assign [class="Hexchat"] 4 : chat
-assign [class="Ktorrent"] 6 : torrent
+assign [class="Google-chrome"] $tag2
+assign [class="Thunderbird"] $tag5 
+assign [class="Skype"] $tag4
+assign [class="Hexchat"] $tag4
+assign [class="Ktorrent"] $tag6
 
 # Disable mouse focus
 focus_follows_mouse no
