--- a/.i3-desktop/config
+++ b/.i3-desktop/config
@@ -29,7 +29,7 @@ set $mod Mod4
 
 # class                 border  backgr. text    indicator
 client.focused          #FF9900 #FF6103 #ffffff #292d2e
-client.focused_inactive #333333 #2E0854 #ffffff #484e50
+client.focused_inactive #FF9900 #2E0854 #ffffff #484e50
 client.unfocused        #000000 #2E0854 #cfcfcf #292d2e
 client.urgent           #2f343a #900000 #ffffff #900000
 
@@ -202,7 +202,7 @@ bar {
         	active_workspace   #9B30FF #551A8B #cfcfcf
         	inactive_workspace #9B30FF #551A8B #cfcfcf
         	urgent_workspace   #aa0000 #990000 #ffffff
-        }
+    }
     # Using custom i3status.conf
     status_command i3status -c ~/.i3/i3status.conf    
     tray_output primary 
