--- a/.i3-desktop/config
+++ b/.i3-desktop/config
@@ -214,10 +214,11 @@ assign [class="Thunderbird"] $tag5
 assign [class="Skype"] $tag4
 assign [class="Hexchat"] $tag4
 assign [class="Ktorrent"] $tag6
+assign [class="Deluge"] $tag6
 
 # Disable mouse focus
 focus_follows_mouse no
-#mouse_warping none
+mouse_warping none
 
 #lock computer
 bindsym Control+$mod+l exec ~/.i3/i3lock.sh
