--- a/.i3-desktop/config
+++ b/.i3-desktop/config
@@ -8,7 +8,9 @@
 # i3 config file (v4)
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
-
+#
+# THIS IS CONFIG FOR DESKTOP
+#
 #auto start
 #exec --no-startup-id ~/Programs/pa-applet/src/pa-applet
 exec --no-startup-id skype
@@ -27,21 +29,23 @@ exec --no-startup-id nm-applet
 set $mod Mod4
 
 
+# Colors
 # class                 border  backgr. text    indicator
-client.focused          #FF9900 #FF6103 #ffffff #292d2e
-client.focused_inactive #FF9900 #2E0854 #ffffff #484e50
-client.unfocused        #000000 #2E0854 #cfcfcf #292d2e
-client.urgent           #2f343a #900000 #ffffff #900000
+client.focused          #d64937 #d64937 #dcdcdc #2e9ef4
+client.focused_inactive #2d2d2d #2d2d2d #dcdcdc #484e50
+client.unfocused        #2D2D2D #2d2d2d #dcdcdc #292d2e
+client.urgent           #2D2D2D #2D2D2D #dcdcdc #900000
 
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
-font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
+# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 # The font above is very space-efficient, that is, it looks good, sharp and
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
 # font pango:DejaVu Sans Mono 10
+font pango:Terminus 9.5
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -191,25 +195,27 @@ workspace $tag7 output DFP4
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	colors{
-		# Whole color settings
-        	background #2E0854
-        	statusline #ffffff
-        	separator  #999999
+    font pango: Icons 10, Terminus 9.5
+    status_command bash ~/.i3/conky
+    tray_output eDP1
 
-        	# Type             border  background font
-        	focused_workspace  #FF6600 #FF6103 #ffffff
-        	active_workspace   #9B30FF #551A8B #cfcfcf
-        	inactive_workspace #9B30FF #551A8B #cfcfcf
-        	urgent_workspace   #aa0000 #990000 #ffffff
+    colors{
+        background #2d2d2d
+        separator #dcdcdc
+
+        focused_workspace  #d64937 #d64937 #dcdcdc
+        active_workspace   #2d2d2d #2d2d2d #dcdcdc
+        inactive_workspace #2d2d2d #2d2d2d #dcdcdc
+        urgent_workspace   #aa0000 #990000 #ffffff    
     }
+        
     # Using custom i3status.conf
-    status_command i3status -c ~/.i3/i3status.conf    
-    tray_output primary 
+    # status_command i3status -c ~/.i3/i3status.conf
 }
 
 #Assign window on workspace
 assign [class="Google-chrome"] $tag2
+assign [class="X-www-browser"] $tag2
 assign [class="Thunderbird"] $tag5 
 assign [class="Skype"] $tag4
 assign [class="Hexchat"] $tag4
