--- a/.i3-desktop/config
+++ b/.i3-desktop/config
@@ -15,7 +15,7 @@
 #exec --no-startup-id ~/Programs/pa-applet/src/pa-applet
 exec --no-startup-id skype
 #exec --no-startup-id hexchat
-exec --no-startup-id i3-msg 'workspace 4 : chat; exec /usr/bin/gnome-terminal -x weechat;workspace 1 : main'
+exec --no-startup-id i3-msg 'workspace 4 : chat; exec /usr/bin/gnome-terminal -x weechat;workspace 1 : code'
 exec --no-startup-id dropbox start
 exec --no-startup-id thunderbird
 #Set xrandr fix (dual monitor)
@@ -147,6 +147,11 @@ bindsym $mod+Shift+7 move container to workspace $tag7
 bindsym $mod+Shift+8 move container to workspace $tag8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
+
+
+#changing keyboard layout
+bindsym $mod+y exec setxkbmap dk
+bindsym $mod+u exec setxkbmap gb
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
