--- a/.i3-laptop/config
+++ b/.i3-laptop/config
@@ -193,7 +193,7 @@ bindsym $mod+u exec setxkbmap gb
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available:)
 bar {
-    font pango: Icons 10, Terminus 9.5
+    font pango: Terminus, Icons 9.5
     status_command bash ~/.i3/conky
     tray_output eDP1
 
