--- a/.i3-desktop/config
+++ b/.i3-desktop/config
@@ -200,9 +200,9 @@ workspace $tag7 output DFP4
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    font pango: Icons 10, Terminus 9.5
+    font pango: Terminus, Icons 9.5
     status_command bash ~/.i3/conky
-    tray_output eDP1
+    tray_output DFP3
 
     colors{
         background #2d2d2d
