--- a/.i3-laptop/config
+++ b/.i3-laptop/config
@@ -29,7 +29,7 @@ set $mod Mod4
 # Colors
 # class                 border  backgr. text    indicator
 client.focused          #d64937	#d64937 #dcdcdc #2e9ef4
-client.focused_inactive #2d2d2d #2d2d2d #dcdcdc #484e50
+client.focused_inactive #2D2D2D #2d2d2d #dcdcdc #484e50
 client.unfocused        #2D2D2D #2d2d2d #dcdcdc #292d2e
 client.urgent           #2D2D2D #2D2D2D #dcdcdc #900000
 
