own version of vim_tlhunter

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "vim_tlhunter"]
 	path = vim_tlhunter
-	url = https://github.com/tlhunter/vimrc.git
+	#url = https://github.com/tlhunter/vimrc.git
+	url = https://github.com/FuzzyAzurik/vimrc-1
